--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -12,8 +12,17 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: pub get
-    - name: Run tests
-      run: pub run test
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - name: Flutter action
+      uses: subosito/flutter-action@v1.3.2
+      with:
+        # The Flutter version to make available on the path
+        flutter-version: 1.17.1 # optional
+        # The Flutter build release channel
+        channel: 'stable' # optional, default is stable
+    - run: flutter pub get
+    - run: flutter test
+    # - run: flutter build apk
